# rbl-fi3203

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: simulation.ipynb
src/: __init__.py  heat_particle_simulation.py  simulation.py  visualizer.py
